@@ -37,6 +37,21 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -136,24 +151,6 @@ operator|.
 name|*
 import|;
 end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
-import|;
-end_import
 begin_comment
 comment|/**  *<p> Writes documents to SOLR.</p>  *<p/>  *<b>This API is experimental and may change in the future.</b>  *  * @since solr 1.3  */
 end_comment
@@ -197,6 +194,12 @@ specifier|final
 name|UpdateRequestProcessor
 name|processor
 decl_stmt|;
+DECL|field|commitWithin
+specifier|private
+specifier|final
+name|int
+name|commitWithin
+decl_stmt|;
 DECL|field|req
 name|SolrQueryRequest
 name|req
@@ -223,6 +226,32 @@ operator|.
 name|req
 operator|=
 name|req
+expr_stmt|;
+name|commitWithin
+operator|=
+operator|(
+name|req
+operator|!=
+literal|null
+operator|)
+condition|?
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getInt
+argument_list|(
+name|UpdateParams
+operator|.
+name|COMMIT_WITHIN
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+else|:
+operator|-
+literal|1
 expr_stmt|;
 block|}
 annotation|@
@@ -289,6 +318,12 @@ operator|.
 name|solrDoc
 operator|=
 name|d
+expr_stmt|;
+name|command
+operator|.
+name|commitWithin
+operator|=
+name|commitWithin
 expr_stmt|;
 name|processor
 operator|.
